k8s/manifests/user/network-system/static-routes/unifi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app unifi
  namespace: network-system
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName

  ports:
    - name: https
      port: 443

  externalName: unifi.${INTERNAL_DOMAIN}
